--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ html{
 }
 body{
   overflow-x:hidden;
-  background:black;
+  background:url(images/giphy.gif);
+  background-size: auto;
 }
 
 .main-width{
@@ -75,8 +76,8 @@ nav ul li .active a{
 }
 
 nav ul li.btn a{
-  background:transparent;
-  color: white;
+  background:cyan;
+  color:black;
   border: 1px solid #f5dca8;
   padding: 9px 20px;
   border-radius: 30px;
@@ -84,7 +85,7 @@ nav ul li.btn a{
   font-size: 14px;
   font-weight: 500;
   margin-left: 150px;
-
+  transition: transform 0.4s;
 }
 
 nav ul li .btn :hover a{
@@ -193,9 +194,9 @@ height:100%;
   margin-bottom: 50px;
 
 }
-.content1 .main-text1 h2 u{
+.content1 .main-text1 h2{
   color:white;
-  margin-bottom: 40px;
+  margin-bottom:50px;
 }
 .content1 .main-text1 h1{
   font-size: 100px;
@@ -315,6 +316,7 @@ font-family:'Permanent Marker',cursive;
   font-size: 14px;
   font-weight: 500;
   padding-bottom: 30px;
+  transition:tramsform 0.4s;
 }
 
 .content2 .main-text2 a:hover{
@@ -342,11 +344,71 @@ margin-right:1000px;
 margin-top:1600px;
 }
 
+/***Support***/
+#comment .support{
+  padding-top:500px;
+  text-align:center;
+  position: relative;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  width:500px;
+}
 
+.support h2{
+  color:#fff;
+  font-size: 40px;
+  margin-bottom: 15px;
+  }
 
+  .support input{
+    width:100%;
+    height: 50px;
+    padding: 0 20px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    border: 1px solid #86b0b6;
 
+  }
+.support input:focus{
+  border: 1px solid deeppink;
+  outline:0;
+}
 
+  .support textarea{
+    width: 100%;
+    height: 150px;
+    padding: 15px 20px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border: 1px solid #86b0b6;
 
+  }
+
+  .support textarea:focus{
+    border: 1px solid deeppink;
+    outline:0;
+  }
+
+  .support button{
+    border: 0;
+    padding: 10px 30px;
+    background:aqua;
+    font-size: 18px;
+    border-radius: 5px;
+    color: black;
+    transition: transform 0.4s;
+  }
+
+  .support button:hover{
+    background:pink;
+    cursor:pointer
+  }
+  #hello{
+    color:#61b752;
+    margin-top:-40 px;
+    display: block;
+  }
 
 
 
